dev/phpunit/fixtures/pass/disallow-null-coalesce-in-for-loops.php
<?php
/** @noinspection ALL */
foreach ( $attributes['properties'] as $property => $value ) {
		$attributes['properties'] ?? [];
}

foreach ( $attributes['properties'] as $property => $value ) {
	$attributes['properties'] ??= [];
}

for ( $i = 1; $i < $attributes['properties']; $i ++ ) {
		$attributes['properties'] ?? 4;
}

for ( $i = 1; $i < $attributes['properties']; $i ++ ) {
	$attributes['properties'] ??= 4;
}

foreach ( $attributes['properties'] as $property => $value ) {
	$attributes['properties'] ? [] : [ 1 ];
}

for ( $i = 1; $i < $attributes['properties']; $i ++ ) {
	$attributes['properties'] ? 4 : 3;
}
